Revert "CSS headings spacing fixes"
This reverts commit 4cee5fbdca7afa150805e177ab84aa339764d3a6.

--- a/components/com_resources/assets/css/resources.css
+++ b/components/com_resources/assets/css/resources.css
@@ -55,7 +55,7 @@
 		display: block;
 		position: absolute;
 		left: 0;
-		top: 1em;
+		top: 0.8em;
 		width: 1.6em;
 		height: 1.6em;
 		font-size: 1.6em;
@@ -72,6 +72,7 @@
 	}
 	.com_resources .four .columns div {
 		padding-left: 2em;
+		padding-top: 1em;
 	}
 	.extracontent .topicpage:before,
 	.extracontent .wiki:before,
